# inverter_modbuslib

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  build.sh
config/.hooks/: pre-commit
docker/: Dockerfile
docu/: Doxyfile
example/esp32/: CMakeLists.txt  sdkconfig
example/esp32/main/: CMakeLists.txt  main_SendRequest.cpp
example/include/catta/gui/: Battery.hpp  Commands.hpp  Connection.hpp  CsvLogging.hpp  Curve.hpp  DummyInverter.hpp  Error.hpp  Input.hpp  Led.hpp  MiniSicc.hpp  Password.hpp  SendButton.hpp  SiRegister.hpp  Solar.hpp  Static.hpp  Uart.hpp  Value.hpp  Values.hpp  Wind.hpp  Write.hpp  WriteSingle.hpp
example/linux/: CMakeLists.txt  main_Responder.cpp  main_SendRequest.cpp
example/linux/gui/: CMakeLists.txt  main_Dummy_Inverter.cpp  main_miniSICC.cpp
example/rp2040/: CMakeLists.txt  main_SendRequest.cpp
example/windows/: CMakeLists.txt  main_SendRequest.cpp
example/windows/gui/: CMakeLists.txt  main_Dummy_Inverter.cpp  main_miniSICC.cpp
include/catta/: ConstString.hpp  Decimal.hpp  EnumConcept.hpp  FixedPointNumber.hpp  Hexadecimal.hpp
include/catta/container/: RingBuffer.hpp
include/catta/esp32/: Pin.hpp  Time.hpp  Uart.hpp  WatchDog.hpp
include/catta/hardware/uart/: Baudrate.hpp  DataBits.hpp  Parity.hpp  StopBits.hpp
include/catta/json/: Parser.hpp  ParsingError.hpp  Serializer.hpp  Token.hpp  TokenType.hpp
include/catta/linux/: HostId.hpp  Time.hpp  Uart.hpp  UartError.hpp
include/catta/modbus/: MasterUart.hpp  MasterUartState.hpp  SlaveUart.hpp  SlaveUartState.hpp  Token.hpp  TokenType.hpp  Uart.hpp  UartState.hpp  ValueCache.hpp
include/catta/modbus/si/: Cache.hpp  Date.hpp  PhysicalQuantety.hpp  PowerConfig.hpp  ReadRegister.hpp  RegisterAddress.hpp  RegisterType.hpp  RegisterValue.hpp  State.hpp  Type.hpp  WriteRegister.hpp
include/catta/modbus/sunspec/: ConnectedPhase.hpp  ScaleFactor.hpp  ScaledSValue.hpp  ScaledUValue.hpp  ScaledValue2U16.hpp  ScaledValue3U16.hpp  ScaledValue4U16.hpp  ScaledValueS16.hpp  ScaledValueU16.hpp  ScaledValueU32.hpp  String.hpp  String16.hpp  String32.hpp  TrackingSelection.hpp  ValueS16.hpp  ValueS32.hpp  ValueU16.hpp  ValueU32.hpp  ValueU64.hpp  ValueU8.hpp
include/catta/parser/: CharacterConcept.hpp  DefaultToken.hpp  DefaultTokenType.hpp  ErrorConcept.hpp  InputHandled.hpp  LineColumnCounter.hpp  ObjectParserConcept.hpp  SequenceParserConcept.hpp  State.hpp  TextPosition.hpp  TokenConcept.hpp  TokenTypeConcept.hpp  Utf8Parser.hpp  Utf8Serializer.hpp
include/catta/rp2040/: Hardware.hpp  Pin.hpp  PinType.hpp  Time.hpp  Uart.hpp
include/catta/state/: ActiveCloseErrorState.hpp  DefaultError.hpp
include/catta/windows/: HostId.hpp  Time.hpp  Uart.hpp  UartError.hpp
json/include/catta/fromjson/: fromJson.hpp
json/include/catta/tojson/: toJson.hpp
logger/client/: SolarInvertInverter.service  SolarInvertName.service  SolarInvertProvision.service  SolarInvertWind.service  client_install.sh  log_solarinvert_inverter.sh  log_solarinvert_name.sh  log_solarinvert_wind.sh  wlan_solarinvert_provision.sh
logger/server/: DashboardContent.sh  grafana_create_dashboard.sh  grafana_create_datasource.sh  grafana_create_token.sh  grafana_create_user.sh  grafana_delete_dashboard.sh  grafana_delete_user.sh  grafana_set_dashboard_permissions.sh  grafana_show_dashboard_list.sh  grafana_show_user_list.sh  influx_backup.sh  influx_create_bucket.sh  influx_create_remote.sh  influx_create_replication.sh  influx_create_task.sh  influx_create_token.sh  influx_delete_bucket.sh  influx_delete_task.sh  influx_delete_token.sh  influx_init.sh  influx_restore.sh  influx_show_bucket_list.sh  influx_show_task_list.sh  influx_show_token_list.sh
manual/: DummyInverter.md  Pi_Anleitung.md
modbus/include/catta/frommodbus/: fromModbus.hpp
modbus/include/catta/tomodbus/: toModbus.hpp
node-red/node-solarinvert/: README.md  batteryinvert.html  batteryinvert.js  inverter.html  inverter.js  package.json
node-red/node-solarinvert/examples/: example.json
node-red/node-solarinvert/locales/en-US/: batteryinvert.html  batteryinvert.json  inverter.html  inverter.json
random/include/catta/random/: ConstString.hpp  Decimal.hpp  FixedPointNumber.hpp  Hexadecimal.hpp  Random.hpp
scripts/: fltk.sh  install_all.sh  modbuslib.sh  node-red.sh
string/include/catta/fromstring/: Decimal.hpp  FixedPointNumber.hpp  Hexadecimal.hpp  fromString.hpp
string/include/catta/tostring/: ConstString.hpp  Decimal.hpp  FixedPointNumber.hpp  (+2 more)
test/unit/: CMakeLists.txt  main_unit_test_ConstString.cpp  main_unit_test_Decimal.cpp  main_unit_test_FixedPointNumber.cpp  main_unit_test_Hexadecimal.cpp  main_unit_test_hardware_uart_Baudrate.cpp  main_unit_test_hardware_uart_DataBits.cpp  main_unit_test_hardware_uart_Parity.cpp  main_unit_test_hardware_uart_StopBits.cpp  main_unit_test_json_Parser.cpp  main_unit_test_json_ParsingError.cpp  main_unit_test_json_Token.cpp  main_unit_test_json_TokenType.cpp  main_unit_test_linux_UartError.cpp  main_unit_test_modbus_MasterUart.cpp  main_unit_test_modbus_MasterUartState.cpp  main_unit_test_modbus_SlaveUart.cpp  main_unit_test_modbus_SlaveUartState.cpp  main_unit_test_modbus_Token.cpp  main_unit_test_modbus_TokenType.cpp  main_unit_test_modbus_Uart.cpp  main_unit_test_modbus_UartState.cpp  main_unit_test_modbus_ValueCache.cpp  main_unit_test_modbus_si_Cache.cpp  main_unit_test_modbus_si_Date.cpp  main_unit_test_modbus_si_PhysicalQuantety.cpp  main_unit_test_modbus_si_PowerConfig.cpp  main_unit_test_modbus_si_ReadRegister.cpp  main_unit_test_modbus_si_RegisterAddress.cpp  main_unit_test_modbus_si_RegisterType.cpp  main_unit_test_modbus_si_RegisterValue.cpp  main_unit_test_modbus_si_State.cpp  main_unit_test_modbus_si_Type.cpp  main_unit_test_modbus_si_WriteRegister.cpp  main_unit_test_modbus_si_request_ConstantVoltage.cpp  main_unit_test_modbus_si_request_ControlBatteryInvert.cpp  main_unit_test_modbus_si_request_LimitBatteryInvert.cpp  main_unit_test_modbus_si_request_PowerFactor.cpp  main_unit_test_modbus_si_request_Request.cpp  main_unit_test_modbus_si_request_Small.cpp  (+52 more)
(+416 files in other folders)
